[gd_scene load_steps=18 format=2]

[ext_resource path="res://BenBonk Sprites/BenBonk Tilemap Minimized.png" type="Texture" id=1]
[ext_resource path="res://BenBonk Sprites/Trophies.png" type="Texture" id=2]
[ext_resource path="res://Ending.gd" type="Script" id=3]
[ext_resource path="res://BenBonk Sprites/bulky-pixels/bulkypixels/BULKYPIX.TTF" type="DynamicFontData" id=4]

[sub_resource type="TileSet" id=1]
0/name = "BenBonk Tilemap Minimized.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 96, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 2
outline_color = Color( 0.0196078, 0.141176, 0.776471, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 29
outline_size = 2
outline_color = Color( 0.886275, 0.470588, 0.168627, 1 )
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Lose",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Secret",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Win",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "WinCycle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
size = 35
outline_size = 2
outline_color = Color( 0.129412, 0.623529, 0.0588235, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
size = 28
outline_size = 2
outline_color = Color( 0.909804, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 4 )

[node name="Ending" type="Node2D"]
script = ExtResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2( 3, 3 )
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 536870912, 0, 1, 536870912, 0, 2, 536870912, 0, 3, 536870912, 0, 4, 536870912, 0, 5, 536870912, 0, 6, 536870912, 0, 7, 536870912, 0, 8, 536870912, 0, 9, 536870912, 0, 10, 536870912, 0, 11, 536870912, 0, 12, 536870912, 0, 13, 536870912, 0, 14, 536870912, 0, 15, 536870912, 0, 16, 536870912, 0, 17, 536870912, 0, 18, 536870912, 0, 19, 536870912, 0, 20, 536870912, 0, 21, 536870912, 0, 65536, 536870912, 0, 65537, 536870912, 0, 65538, 536870912, 0, 65539, 536870912, 0, 65540, 536870912, 0, 65541, 536870912, 0, 65542, 536870912, 0, 65543, 536870912, 0, 65544, 536870912, 0, 65545, 536870912, 0, 65546, 536870912, 0, 65547, 536870912, 0, 65548, 536870912, 0, 65549, 536870912, 0, 65550, 536870912, 0, 65551, 536870912, 0, 65552, 536870912, 0, 65553, 536870912, 0, 65554, 536870912, 0, 65555, 536870912, 0, 65556, 536870912, 0, 65557, 536870912, 0, 131072, 536870912, 0, 131073, 536870912, 0, 131074, 536870912, 0, 131075, 536870912, 0, 131076, 536870912, 0, 131077, 536870912, 0, 131078, 536870912, 0, 131079, 536870912, 0, 131080, 536870912, 0, 131081, 536870912, 0, 131082, 536870912, 0, 131083, 536870912, 0, 131084, 536870912, 0, 131085, 536870912, 0, 131086, 536870912, 0, 131087, 536870912, 0, 131088, 536870912, 0, 131089, 536870912, 0, 131090, 536870912, 0, 131091, 536870912, 0, 131092, 536870912, 0, 131093, 536870912, 0, 196608, 536870912, 0, 196609, 536870912, 0, 196610, 536870912, 0, 196611, 536870912, 0, 196612, 536870912, 0, 196613, 536870912, 0, 196614, 536870912, 0, 196615, 536870912, 0, 196616, 536870912, 0, 196617, 536870912, 0, 196618, 536870912, 0, 196619, 536870912, 0, 196620, 536870912, 0, 196621, 536870912, 0, 196622, 536870912, 0, 196623, 536870912, 0, 196624, 536870912, 0, 196625, 536870912, 0, 196626, 536870912, 0, 196627, 536870912, 0, 196628, 536870912, 0, 196629, 536870912, 0, 262144, 536870912, 0, 262145, 536870912, 0, 262146, 536870912, 0, 262147, 536870912, 0, 262148, 536870912, 0, 262149, 536870912, 0, 262150, 536870912, 0, 262151, 536870912, 0, 262152, 536870912, 0, 262153, 536870912, 0, 262154, 536870912, 0, 262155, 536870912, 0, 262156, 536870912, 0, 262157, 536870912, 0, 262158, 536870912, 0, 262159, 536870912, 0, 262160, 536870912, 0, 262161, 536870912, 0, 262162, 536870912, 0, 262163, 536870912, 0, 262164, 536870912, 0, 262165, 536870912, 0, 327680, 536870912, 0, 327681, 536870912, 0, 327682, 536870912, 0, 327683, 536870912, 0, 327684, 536870912, 0, 327685, 536870912, 0, 327686, 536870912, 0, 327687, 536870912, 0, 327688, 536870912, 0, 327689, 536870912, 0, 327690, 536870912, 0, 327691, 536870912, 0, 327692, 536870912, 0, 327693, 536870912, 0, 327694, 536870912, 0, 327695, 536870912, 0, 327696, 536870912, 0, 327697, 536870912, 0, 327698, 536870912, 0, 327699, 536870912, 0, 327700, 536870912, 0, 327701, 536870912, 0, 393216, 536870912, 0, 393217, 536870912, 0, 393218, 536870912, 0, 393219, 536870912, 0, 393220, 536870912, 0, 393221, 536870912, 0, 393222, 536870912, 0, 393223, 536870912, 0, 393224, 536870912, 0, 393225, 536870912, 0, 393226, 536870912, 0, 393227, 536870912, 0, 393228, 536870912, 0, 393229, 536870912, 0, 393230, 536870912, 0, 393231, 536870912, 0, 393232, 536870912, 0, 393233, 536870912, 0, 393234, 536870912, 0, 393235, 536870912, 0, 393236, 536870912, 0, 393237, 536870912, 0, 458752, 536870912, 0, 458753, 536870912, 0, 458754, 536870912, 0, 458755, 536870912, 0, 458756, 536870912, 0, 458757, 536870912, 0, 458758, 536870912, 0, 458759, 536870912, 0, 458760, 536870912, 0, 458761, 536870912, 0, 458762, 536870912, 0, 458763, 536870912, 0, 458764, 536870912, 0, 458765, 536870912, 0, 458766, 536870912, 0, 458767, 536870912, 0, 458768, 536870912, 0, 458769, 536870912, 0, 458770, 536870912, 0, 458771, 536870912, 0, 458772, 536870912, 0, 458773, 536870912, 0, 524288, 536870912, 0, 524289, 536870912, 0, 524290, 536870912, 0, 524291, 536870912, 0, 524292, 536870912, 0, 524293, 536870912, 0, 524294, 536870912, 0, 524295, 536870912, 0, 524296, 536870912, 0, 524297, 536870912, 0, 524298, 536870912, 0, 524299, 536870912, 0, 524300, 536870912, 0, 524301, 536870912, 0, 524302, 536870912, 0, 524303, 536870912, 0, 524304, 536870912, 0, 524305, 536870912, 0, 524306, 536870912, 0, 524307, 536870912, 0, 524308, 536870912, 0, 524309, 536870912, 0, 589824, 536870912, 0, 589825, 536870912, 0, 589826, 536870912, 0, 589827, 536870912, 0, 589828, 536870912, 0, 589829, 536870912, 0, 589830, 536870912, 0, 589831, 536870912, 0, 589832, 536870912, 0, 589833, 536870912, 0, 589834, 536870912, 0, 589835, 536870912, 0, 589836, 536870912, 0, 589837, 536870912, 0, 589838, 536870912, 0, 589839, 536870912, 0, 589840, 536870912, 0, 589841, 536870912, 0, 589842, 536870912, 0, 589843, 536870912, 0, 589844, 536870912, 0, 589845, 536870912, 0, 655360, 536870912, 0, 655361, 536870912, 0, 655362, 536870912, 0, 655363, 536870912, 0, 655364, 536870912, 0, 655365, 536870912, 0, 655366, 536870912, 0, 655367, 536870912, 0, 655368, 536870912, 0, 655369, 536870912, 0, 655370, 536870912, 0, 655371, 536870912, 0, 655372, 536870912, 0, 655373, 536870912, 0, 655374, 536870912, 0, 655375, 536870912, 0, 655376, 536870912, 0, 655377, 536870912, 0, 655378, 536870912, 0, 655379, 536870912, 0, 655380, 536870912, 0, 655381, 536870912, 0, 720896, 536870912, 0, 720897, 536870912, 0, 720898, 536870912, 0, 720899, 536870912, 0, 720900, 536870912, 0, 720901, 536870912, 0, 720902, 536870912, 0, 720903, 536870912, 0, 720904, 536870912, 0, 720905, 536870912, 0, 720906, 536870912, 0, 720907, 536870912, 0, 720908, 536870912, 0, 720909, 536870912, 0, 720910, 536870912, 0, 720911, 536870912, 0, 720912, 536870912, 0, 720913, 536870912, 0, 720914, 536870912, 0, 720915, 536870912, 0, 720916, 536870912, 0, 720917, 536870912, 0, 786432, 536870912, 0, 786433, 536870912, 0, 786434, 536870912, 0, 786435, 536870912, 0, 786436, 536870912, 0, 786437, 536870912, 0, 786438, 536870912, 0, 786439, 536870912, 0, 786440, 536870912, 0, 786441, 536870912, 0, 786442, 536870912, 0, 786443, 536870912, 0, 786444, 536870912, 0, 786445, 536870912, 0, 786446, 536870912, 0, 786447, 536870912, 0, 786448, 536870912, 0, 786449, 536870912, 0, 786450, 536870912, 0, 786451, 536870912, 0, 786452, 536870912, 0, 786453, 536870912, 0 )

[node name="Margin" type="MarginContainer" parent="."]
margin_right = 1053.0
margin_bottom = 620.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 1053.0
margin_bottom = 620.0
size_flags_horizontal = 3

[node name="You_Ended" type="Label" parent="Margin/VBox"]
margin_right = 1053.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 2 )
text = "You Finished!
"
align = 1

[node name="What_you_got" type="Label" parent="Margin/VBox"]
margin_top = 117.0
margin_right = 1053.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 3 )
text = "You got the Good Ending!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trophy" type="AnimatedSprite" parent="Margin/VBox"]
position = Vector2( 529.471, 234.254 )
scale = Vector2( 8.15394, 7.86994 )
frames = SubResource( 10 )
animation = "WinCycle"
playing = true

[node name="CenterContainer" type="CenterContainer" parent="Margin/VBox"]
margin_top = 151.0
margin_right = 1053.0
margin_bottom = 265.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="What_to_do" type="Label" parent="Margin/VBox"]
margin_top = 317.0
margin_right = 1053.0
margin_bottom = 334.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 11 )
text = "Now that you've finished you can replay the game and get another trophy!"
align = 1

[node name="HBox" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 387.0
margin_right = 1053.0
margin_bottom = 501.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Margin/VBox/HBox"]
margin_right = 260.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="Trust" type="Button" parent="Margin/VBox/HBox"]
margin_left = 264.0
margin_right = 524.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 12 )
text = "Trust"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Don\'t Trust" type="Button" parent="Margin/VBox/HBox"]
margin_left = 528.0
margin_right = 788.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 13 )
text = "Dont' Trust"

[node name="CenterContainer" type="CenterContainer" parent="Margin/VBox/HBox"]
margin_left = 792.0
margin_right = 1053.0
margin_bottom = 114.0
size_flags_horizontal = 3

[node name="Center" type="CenterContainer" parent="Margin/VBox"]
margin_top = 505.0
margin_right = 1053.0
margin_bottom = 620.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Margin/VBox/HBox/Trust" to="." method="_on_Trust_pressed"]
[connection signal="pressed" from="Margin/VBox/HBox/Don't Trust" to="." method="_on_Dont_Trust_pressed"]
